# drt

./: CHANGELOG.md  CLAUDE.md  Makefile  README.md  SECURITY.md  pyproject.toml
.claude/commands/: drt-init.md  drt-release-check.md
.github/: labels.yml
.github/workflows/: publish.yml  sync-labels.yml
docs/plans/: 2026-03-31-v0.4-implementation.md
drt/cli/: init_wizard.py  main.py
drt/config/: credentials.py  models.py
drt/destinations/: google_sheets.py  mysql.py
drt/sources/: clickhouse.py
examples/clickhouse_to_rest/: README.md  drt_project.yml  profiles.yml.example
examples/clickhouse_to_rest/syncs/: ch_sync.yml
skills/drt/skills/drt-init/: SKILL.md
tests/unit/: test_clickhouse.py  test_config.py  test_google_sheets.py  test_mysql_destination.py  test_redshift.py
